--- a/index.html
+++ b/index.html
@@ -2,230 +2,304 @@
 <html amp lang="en-ID">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BIROTOTO : Info Link Situs Toto Slot Gacor & Bandar Togel 4D Online Terbaru Pasaran Terlengkap 2025</title>
-    <meta name="description"
-        content="BIROTOTO memberikan informasi situs toto slot gacor gampang maxwin dan bandar togel 4d online dengan pasaran terlengkap dan hadiah terbesar yang bisa anda dapatkan setiap harinya!" />
-    <meta name="robots" content="index,follow" />
-    <link href="https://myecanfolder.me/img/Favicon.png" rel="shortcut icon"
-        type="image/x-icon" />
-    <link rel="canonical" href="#" />
-    <meta property="og:url" content="#" />
-    <meta property="og:site_name" content="BIROTOTO" />
-    <meta property="og:image:alt" content="BIROTOTO" />
-    <meta property="og:image" content="https://i.postimg.cc/pVZ5hHkY/situstogelbiro.jpg" />
-    <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js" />
-   <script async src="https://cdn.ampproject.org/v0.js"></script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cluster Togelonline88 | Dunia Game Togel Online Dengan Euforia Tak Tertandingi Di Indonesia</title>
+  <meta name="description"
+    content="Cluster Togelonline88 mempersembahkan pengalaman bermain togel online paling sensasional di Indonesia, dengan pasaran resmi terlengkap, sistem fair play, minimal bet murah, dan peluang menang besar yang membawa euforia tak tertandingi setiap harinya." />
+  <meta name="robots" content="index,follow" />
+  <link href="https://togelonline88.sgp1.cdn.digitaloceanspaces.com/iconweb.webp" rel="shortcut icon" type="image/x-icon" />
+  <link rel="canonical" href="https://wodifylive.com/" />
+  <meta property="og:url" content="https://wodifylive.com/" />
+  <meta property="og:site_name" content="TOGELONLINE88" />
+  <meta property="og:image:alt" content="TOGELONLINE88" />
+  <meta property="og:image" content="https://togelonline88.sgp1.cdn.digitaloceanspaces.com/cluster-togelonline88.png" />
+  <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js" />
+  <script async src="https://cdn.ampproject.org/v0.js"></script>
+  <style amp-boilerplate>
+    body {
+      -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+      -moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+      -ms-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+      animation: -amp-start 8s steps(1, end) 0s 1 normal both
+    }
+
+    @-webkit-keyframes -amp-start {
+      from {
+        visibility: hidden
+      }
+
+      to {
+        visibility: visible
+      }
+    }
+
+    @-moz-keyframes -amp-start {
+      from {
+        visibility: hidden
+      }
+
+      to {
+        visibility: visible
+      }
+    }
+
+    @-ms-keyframes -amp-start {
+      from {
+        visibility: hidden
+      }
+
+      to {
+        visibility: visible
+      }
+    }
+
+    @-o-keyframes -amp-start {
+      from {
+        visibility: hidden
+      }
+
+      to {
+        visibility: visible
+      }
+    }
+
+    @keyframes -amp-start {
+      from {
+        visibility: hidden
+      }
+
+      to {
+        visibility: visible
+      }
+    }
+  </style>
+  <noscript>
     <style amp-boilerplate>
-        body {
-            -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
-            -moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
-            -ms-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
-            animation: -amp-start 8s steps(1, end) 0s 1 normal both
-        }
-
-        @-webkit-keyframes -amp-start {
-            from {
-                visibility: hidden
-            }
-
-            to {
-                visibility: visible
-            }
-        }
-
-        @-moz-keyframes -amp-start {
-            from {
-                visibility: hidden
-            }
-
-            to {
-                visibility: visible
-            }
-        }
-
-        @-ms-keyframes -amp-start {
-            from {
-                visibility: hidden
-            }
-
-            to {
-                visibility: visible
-            }
-        }
-
-        @-o-keyframes -amp-start {
-            from {
-                visibility: hidden
-            }
-
-            to {
-                visibility: visible
-            }
-        }
-
-        @keyframes -amp-start {
-            from {
-                visibility: hidden
-            }
-
-            to {
-                visibility: visible
-            }
-        }
+      body {
+        -webkit-animation: none;
+        -moz-animation: none;
+        -ms-animation: none;
+        animation: none
+      }
     </style>
-    <noscript>
-        <style amp-boilerplate>
-            body {
-                -webkit-animation: none;
-                -moz-animation: none;
-                -ms-animation: none;
-                animation: none
-            }
-        </style>
-    </noscript>
+  </noscript>
 
-    <style amp-custom>
-        * {
-            box-sizing: border-box;
-        }
+  <style amp-custom>
+    * {
+      box-sizing: border-box;
+    }
 
-        body {
-            font-family: monospace;
-            position: relative;
-            background: #000000;
-            background-image: radial-gradient(#494845 5%, transparent 50%);
-            background-size: 5px 5px;
-            background-attachment: fixed;
-        }
+    body {
+      font-family: monospace;
+      position: relative;
+      background: #1d1c1b;
+      background-image: radial-gradient(#000000 5%, transparent 50%);
+      background-size: 5px 5px;
+      background-attachment: fixed;
+    }
 
-        .container {
-            max-width: 400px;
-            height: 100vh;
-            margin: 0 auto;
-            padding: 15px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            overflow: hidden;
-        }
+    .container {
+      max-width: 400px;
+      height: 100vh;
+      margin: 0 auto;
+      padding: 15px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      overflow: hidden;
+    }
 
-        .welcome {
-            max-width: 350px;
-            margin: 0 auto;
-        }
+    .welcome {
+      max-width: 350px;
+      margin: 0 auto;
+    }
 
-        .welcome h1 {
-            font-size: 12px;
-            color: #fff;
-            overflow: hidden;
-            border-right: .15em solid #fbf4a0;
-            /* The typwriter cursor */
-            white-space: nowrap;
-            letter-spacing: .09em;
-            animation: typing 3.5s steps(40, end), blink-caret .75s step-end infinite;
-        }
+    .welcome h1 {
+      font-size: 12px;
+      color: #fff;
+      overflow: hidden;
+      border-right: .15em solid #fbf4a0;
+      white-space: nowrap;
+      letter-spacing: .09em;
+      animation: typing 3.5s steps(40, end), blink-caret .75s step-end infinite;
+    }
 
-        @keyframes typing {
-            from {
-                width: 0
-            }
+    @keyframes typing {
+      from {
+        width: 0
+      }
 
-            to {
-                width: 100%
-            }
-        }
+      to {
+        width: 100%
+      }
+    }
 
-        @keyframes blink-caret {
+    @keyframes blink-caret {
+      from,
+      to {
+        border-color: transparent
+      }
 
-            from,
-            to {
-                border-color: transparent
-            }
+      50% {
+        border-color: #fbf4a0;
+      }
+    }
 
-            50% {
-                border-color: #fbf4a0;
-            }
-        }
+    .banner {
+      border-radius: 10px;
+      box-shadow: 0 0 20px 5px #156b00;
+      transition: transform 0.3s ease-in-out;
+    }
 
-        .banner {
-            border-radius: 10px;
-        }
+    .btn-login,
+    .btn-daftar {
+      padding: 10px;
+      color: #ffffff;
+      font-size: 20px;
+      font-weight: bold;
+      text-decoration: none;
+      text-align: center;
+      background: linear-gradient(to bottom, #156b00 100%, rgba(255, 0, 0, 0.767) 0%);
+      margin-top: 10px;
+      border-radius: 10px;
+      position: relative;
+      z-index: 2;
+      box-shadow: 0 0 10px #156b00;
+    }
 
-        .btn-login {
-            padding: 10px;
-            color: #000000;
-            font-size: 20px;
-            font-weight: bold;
-            text-decoration: none;
-            text-align: center;
-            background: linear-gradient(to bottom, #cf0000 100%, rgb(0 0 0) 0%);
-            margin-top: 10px;
-            border-radius: 10px;
-            position: relative;
-            z-index: 2;
-            box-shadow: 0 0 10px #ffe000;
-        }
+    .copyright {
+      text-align: center;
+      color: #156b00;
+    }
 
-        .btn-daftar {
-            padding: 10px;
-            color: #fff;
-            font-size: 20px;
-            font-weight: bold;
-            text-decoration: none;
-            text-align: center;
-            background: linear-gradient(to bottom, #ff0000 100%, rgb(255, 0, 0) 0%);
-            margin-top: 10px;
-            border-radius: 10px;
-            position: relative;
-            z-index: 2;
-            box-shadow: 0 0 10px #ff0000;
-        }
+    .nagaterbang {
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      margin: auto;
+    }
 
-        .copyright {
-            text-align: center;
-            color: #ffffff96;
-        }
+    .gold-wind {
+      position: relative;
+      height: 100px;
+      overflow: hidden;
+      margin-top: 5px;
+    }
 
-        .nagaterbang {
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            right: 0;
-            top: 0;
-            bottom: 0;
-            margin: auto;
-        }
-    </style>
+    .wind-line {
+      position: absolute;
+      top: 1px;
+      left: -200%;
+      width: 300%;
+      height: 10px;
+      background: linear-gradient(90deg, transparent, #156b00, transparent);
+      animation: wind-blow 4s linear infinite;
+    }
+
+    .retro-text {
+      position: relative;
+      text-align: center;
+      font-size: 1.09rem;
+      color: #156b00;
+      text-shadow: 0 0 5px #156b00, 0 0 10px #02360f;
+      animation: flicker 1s infinite;
+    }
+
+    .retro-text::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: repeating-linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0.2) 0px,
+        rgba(0, 0, 0, 0.2) 2px,
+        transparent 2px,
+        transparent 4px
+      );
+      pointer-events: none;
+      animation: scanline 1.5s linear infinite;
+    }
+
+    @keyframes flicker {
+      0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+        opacity: 1;
+      }
+      20%, 22%, 24%, 55% {
+        opacity: 0.7;
+      }
+    }
+
+    @keyframes scanline {
+      0% {
+        transform: translateY(-100%);
+      }
+      100% {
+        transform: translateY(100%);
+      }
+    }
+
+    @keyframes wind-blow {
+      0% {
+        left: -200%;
+      }
+
+      100% {
+        left: 100%;
+      }
+    }
+
+    @keyframes fadein {
+      0% {
+        opacity: 0;
+      }
+
+      40% {
+        opacity: 1;
+      }
+
+      80% {
+        opacity: 0;
+      }
+
+      100% {
+        opacity: 0;
+      }
+    }
+  </style>
 </head>
 
 <body>
-    <div class="container">
-        <header>
-            <center><a href="https://cutt.ly/birooooseox"><amp-img id="image" class="animated tada infinite slower"
-                        src="https://myecanfolder.me/img/birototo-petir.gif"
-                        alt="BIROTOTO" width="260" height="95" layout="intrinsic"></amp-img></a>
-            </center>           
-        </header>
-        <div class="welcome">
-            <h1>Orang Bijak Main Di BIROTOTO</h1>
-        </div>
-
-        <amp-img src="https://i.postimg.cc/pVZ5hHkY/situstogelbiro.jpg
-" width="500"
-            height="500" layout="intrinsic" class="banner"></amp-img>
-
-        <a href="https://cutt.ly/birooooseox" target="_blank" rel="noreferrer noopener" role="button"
-            class="btn-login">LOGIN</a>
-        <a href="https://cutt.ly/birooooseox" target="_blank" rel="noreferrer noopener" role="button"
-            class="btn-daftar">DAFTAR</a>
-
-        <p class="copyright">© 2025 • <a style="color: #f9b333;" href="#">BIROTOTO</a> •
-            All Rights Reserved 
-			| Landed By JOEL</p>
+  <div class="container">
+    <header>
+      <center><a href="https://agen.lol/togon/gadungan"><amp-img id="image" class="animated tada infinite slower"
+            src="https://togelonline88.sgp1.cdn.digitaloceanspaces.com/logoweb.webp" alt="TOGELONLINE88" width="200" height="75"
+            layout="intrinsic"></amp-img></a>
+    </header>
+    <div class="welcome">
+      <h1></h1>
     </div>
 
+    <amp-img src="https://togelonline88.sgp1.cdn.digitaloceanspaces.com/cluster-togelonline88.png" width="500" height="500" layout="intrinsic"
+      class="banner"></amp-img>
+    
+    <a href="https://agen.lol/togon/gadungan" target="_blank" rel="noreferrer noopener" role="button"
+      class="btn-login">LOGIN</a>
+    <a href="https://agen.lol/togon/gadungan" target="_blank" rel="noreferrer noopener" role="button"
+      class="btn-daftar">DAFTAR</a>
+    <p class="copyright">Cluster Game Togel Online Di Indonesia<a style="color: #156b00;" href=""></a></p>
+    <div class="gold-wind">
+      <div class="wind-line"></div>
+      <br><br>
+      <div class="retro-text">T E A M J A G O A N E O N</div>
+    </div>
+  </div>
 </body>
 
 </html>
